--- a/css/header.css
+++ b/css/header.css
@@ -16,6 +16,7 @@
   font-family: var(--title-font);
   font-weight: bold;
   font-size: 1.15em;
+  margin: 0 15px;
   transition-duration: .3s;
   transition-property: all;
   transition-timing-function: ease-in-out;
@@ -32,7 +33,7 @@
   position: absolute;
   right: 9.7px;
   width: 36px;
-  z-index: 0;
+  z-index: -1;
 }
 .header-image:hover {
   filter: blur(1000px);
