--- a/css/profile.css
+++ b/css/profile.css
@@ -1,25 +1,47 @@
 .about-me {
   display: flex;
-  flex-direction: row-reverse;
+  flex-direction: reverse;
   padding: 90px 0 80px 0;
   align-items: center;
   justify-content: center;
+}
+.profile-container {
+  position: relative;
+  max-width: 300px;
+  margin: 10px;
+}
+.profile-image {
+  position: relative;
+  z-index: 3;
+}
+.profile-image img {
+  box-shadow: 0 0 6px 0 black;
+  border-radius: 2px;
+  height:330px;
+  width: 100%;
+  opacity: 96.7%;
+  display: block;
+}
+.profile-box1 {
+  position: absolute;
+  top: 8px;
+  left: -14px;
+  background-color: rgb(3, 3, 3);
+  border: 1px solid white;
+  border-radius: 2px;
+  background-image: url('/stock/texture/dark-exa.png');
+  height: 100%;
+  width: 100%;
+  z-index: 2;
 }
 .profile-info {
   text-align: center;
   color: white;
 }
-.profile-image-div{
-  text-align: center;
-  padding: 20px;
-}
-.profile-image {
-  height: 250px;
-  margin: 20px;
-}
 .profile-description {
   max-width: 450px;
   padding: 0px 30px;
+  font-size: 1.1em;
 }
 .profile-contact {
   height: 25px;
@@ -36,7 +58,7 @@
 }
 .strong {
   color: var(--fifth-color);
-  font-size: 1.3em;
+  font-size: 1.5em;
   padding: 0px 0px 0px 4px;
   transition: .3s ease-in-out all;
 }
@@ -45,5 +67,5 @@
   border-radius: 4px;
 }
 .strong:hover {
-  text-shadow: 0px 0px 2px var(--fifth-color);
+  text-shadow: 0px 0px 4px var(--fifth-color);
 }
